<resources>
    <string name="app_name">Layouts</string>
    <string name="relative_layout">Relative layout</string>
    <string name="nome">João da Silva</string>
    <string name="email">joaodasilva@fiap.com.br</string>
    <string name="sair">Sair</string>
    <string name="absolute_layout">Absolute Layout</string>
    <string name="frame_layout">Fram Layout</string>
    <string name="digite_seu_usuario">Usuário</string>
    <string name="digite_sua_senha">Senha</string>
    <string name="login">Login</string>
    <string name="table_layout">Table Layout</string>
    <string name="botão">Botão</string>
</resources>
